--- a/assets/style.css
+++ b/assets/style.css
@@ -56,6 +56,13 @@ nav a:hover{
     color:var(--grey);
 }
 
+figure a:hover{
+    -webkit-box-shadow: 0px 0px 39px 17px rgba(112,22,60,1);
+    -moz-box-shadow: 0px 0px 39px 17px rgba(112,22,60,1);
+    box-shadow: 0px 0px 39px 17px rgba(112,22,60,1);
+    transition: .8s ease; 
+    }   
+
 nav a:active{
     color:var(--pansy)};
 
@@ -90,7 +97,10 @@ figure.avatar{
     margin-left: -20px;
     align-items: center;
 }
-
+figure.avatar img {
+    max-width: 200px;
+    margin: 20px 30px 0 0;
+}
 .about-me-text {
     flex: 1 1 auto;
     text-decoration: none;
@@ -100,32 +110,59 @@ figure.avatar{
 
 }
 
-/* Main - with "My Works" */
+/* Aside - with "My Works title" */
 main {
+    display: inline-block;
     border: 5px solid var(--textblack);
-    padding: 20px 40px 0 40px;
-    max-width: 100%;
-    display:flex;
+    margin-top: 30px;
 }
 
-aside {
-    border: 5px solid var(--textblack);
+article {
     padding: 20px 40px 0 40px;
-    max-width: 100%;
-    display:flex;
+    max-width: 50%;
+    float:left;
 }
-
-img {
+article img {
     max-width: 200px;
     margin: 20px 30px 0 0;
-    object-fit: contain;
-    display: flex;
-    flex-flow: row wrap;    
 }
 
-img .first-work {
+#my-works {
+    position: absolute;
+    font-size: 2rem;
+    text-align: center;
+    margin-top:-10px;
+    margin-left: 13%;
+}
+
+figure img.first-work{
+   max-width: 100%;
+   margin-top: 30px;
+   margin-bottom: 10px;
+}
+
+/* Main with placeholder images for other works */
+
+aside {
+    padding: 0 0 20px 30px;
+    max-width: 50%;
+    float: right;
+}
+
+aside img {
+    max-width: 125px;
+    margin-top: 40px;
+}
+
+aside div {
+    display: inline-flex;
+    justify-content: center;
+}
+
+
+/* img .first-work {
     max-width: 400px;
     margin: 20px 30px 0 0;
     object-fit: contain;
     align-self: flex-start;
-}
+} */
